fix: implement all the good practice in the Sarif
