# apps/back/src/api/apidocs.rs
@@ -22,14 +22,25 @@ use utoipa::OpenApi;
     info(
         title = "MonoFolio",
         version = "0.1.0",
-        description = "API documentation for MonoFolio"
+        description = "This is the API that serves the content of the MonoFolio website to the front end, the MonoFolio idea is to have the Portfolio Front and Backend in a single repository.",
+        contact(
+            name = "Batleforc",
+            email = "maxleriche.60@gmail.com",
+            url = "https://maxleriche.net"
+        )
     ),
     tags(
-        ( name = "Home", description = "Home related endpoints"),
-        ( name = "Blog", description = "Blog related endpoints"),
-        ( name = "Doc", description = "Doc related endpoints"),
-        ( name = "Page", description = "Page related endpoints"),
-        ( name = "Media", description = "Media related endpoints")
+
+        ( name = "Blog", description = "Return the content of the blog timeline and page to be displayed."),
+        ( name = "Doc", description = "Return the content of the documentation page, sidebar and header."),
+        ( name = "Home", description = "Endpoints that return the content meant for the home page."),
+        ( name = "Media", description = "Return the assets that are meant to be dynamically loaded and not a part of the static build."),
+        ( name = "Page", description = "Return the content of a page with a specific workflow turning shortPage into a full page.")
+    ),
+    servers(
+        (url = "http://localhost:5437", description = "Local development server."),
+        (url = "https://maxleriche.net", description = "Production server referencing a tagged version of the api."),
+        (url = "https://beta.maxleriche.net", description = "Beta server referencing the main branch.")
     ),
     components(
         schemas(
