# swagger.json
@@ -2,12 +2,31 @@
   "openapi": "3.0.3",
   "info": {
     "title": "MonoFolio",
-    "description": "API documentation for MonoFolio",
+    "description": "This is the API that serves the content of the MonoFolio website to the front end, the MonoFolio idea is to have the Portfolio Front and Backend in a single repository.",
+    "contact": {
+      "name": "Batleforc",
+      "url": "https://maxleriche.net",
+      "email": "maxleriche.60@gmail.com"
+    },
     "license": {
       "name": ""
     },
     "version": "0.1.0"
   },
+  "servers": [
+    {
+      "url": "http://localhost:5437",
+      "description": "Local development server."
+    },
+    {
+      "url": "https://maxleriche.net",
+      "description": "Production server referencing a tagged version of the api."
+    },
+    {
+      "url": "https://beta.maxleriche.net",
+      "description": "Beta server referencing the main branch."
+    }
+  ],
   "paths": {
     "/api/blog": {
       "get": {
@@ -15,11 +34,11 @@
           "Blog"
         ],
         "summary": "Get the blog timeline",
-        "description": "Get blog timeline with minimal description of each article",
+        "description": "Get blog timeline with minimal description of each article.",
         "operationId": "get_timeline",
         "responses": {
           "200": {
-            "description": "Blog Timeline",
+            "description": "Content of the blog timeline ordered by date.",
             "content": {
               "application/json": {
                 "schema": {
@@ -29,7 +48,7 @@
             }
           },
           "500": {
-            "description": "Internal server error"
+            "description": "Internal server error."
           }
         }
       }
@@ -40,11 +59,11 @@
           "Doc"
         ],
         "summary": "Get doc sidebar",
-        "description": "Get doc sidebar with minimal description of each article",
+        "description": "Get doc sidebar with minimal description of each article.",
         "operationId": "get_doc_sidebar",
         "responses": {
           "200": {
-            "description": "Doc Sidebar",
+            "description": "Doc category sidebar.",
             "content": {
               "application/json": {
                 "schema": {
@@ -54,7 +73,7 @@
             }
           },
           "500": {
-            "description": "Internal server error"
+            "description": "Internal server error."
           }
         }
       }
@@ -65,11 +84,11 @@
           "Home"
         ],
         "summary": "Get home content",
-        "description": "Get home page content",
+        "description": "Get the content meant for the home page.",
         "operationId": "get_home",
         "responses": {
           "200": {
-            "description": "Home Content",
+            "description": "Content of the home page.",
             "content": {
               "application/json": {
                 "schema": {
@@ -79,7 +98,7 @@
             }
           },
           "500": {
-            "description": "Internal server error"
+            "description": "Internal server error."
           }
         }
       }
@@ -90,12 +109,13 @@
           "Media"
         ],
         "summary": "Get media from the media folder",
-        "description": "Get media from the media folder",
+        "description": "Get the media asset from the media folder.",
         "operationId": "get_media",
         "parameters": [
           {
             "name": "path",
             "in": "query",
+            "description": "Path to the media asset.",
             "required": true,
             "schema": {
               "type": "string"
@@ -104,13 +124,13 @@
         ],
         "responses": {
           "200": {
-            "description": "Media content"
+            "description": "Media content if found."
           },
           "404": {
-            "description": "Page not found"
+            "description": "Page not found inside of the Media folder or path invalid."
           },
           "500": {
-            "description": "Internal server error"
+            "description": "Internal server error."
           }
         }
       }
@@ -121,12 +141,13 @@
           "Page"
         ],
         "summary": "Get a page content",
-        "description": "fetch page's content by page path in DbFolder",
+        "description": "Fetch page's content by page path in DbFolder.",
         "operationId": "get_page",
         "parameters": [
           {
             "name": "path",
             "in": "query",
+            "description": "Path to the markdown page.",
             "required": true,
             "schema": {
               "type": "string"
@@ -135,7 +156,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Page Content",
+            "description": "Content of a full page if found.",
             "content": {
               "application/json": {
                 "schema": {
@@ -145,10 +166,10 @@
             }
           },
           "404": {
-            "description": "Page not found"
+            "description": "Page not found or path invalid."
           },
           "500": {
-            "description": "Internal server error"
+            "description": "Internal server error."
           }
         }
       }
@@ -158,6 +179,7 @@
     "schemas": {
       "BlogTimeline": {
         "type": "object",
+        "description": "Timeline of the blog space, contain the short representation of the pages.",
         "required": [
           "pages"
         ],
@@ -172,6 +194,7 @@
       },
       "DocCategory": {
         "type": "object",
+        "description": "The recursive structure of the sidebar containing the pages and sub-categories of the documentation.",
         "required": [
           "name",
           "has_index",
@@ -201,6 +224,7 @@
       },
       "DocHeader": {
         "type": "object",
+        "description": "Header of a markdown file.",
         "required": [
           "title",
           "date"
@@ -253,6 +277,7 @@
       },
       "DocHeaderLink": {
         "type": "object",
+        "description": "Link present in the header of a markdown file.",
         "required": [
           "name",
           "url"
@@ -268,6 +293,7 @@
       },
       "DocHeaderSpec": {
         "type": "object",
+        "description": "Specification of the header of a markdown file, include the information if a Header is a blog/project/doc.",
         "properties": {
           "blog": {
             "type": "boolean"
@@ -282,6 +308,7 @@
       },
       "DocHeaderWritter": {
         "type": "object",
+        "description": "Writer present in the header of a markdown file.",
         "required": [
           "name",
           "url",
@@ -301,6 +328,7 @@
       },
       "HomeContent": {
         "type": "object",
+        "description": "Content of the home page.",
         "required": [
           "name",
           "presentation",
@@ -341,6 +369,7 @@
       },
       "HomeHistory": {
         "type": "object",
+        "description": "History of the home page, contain a part of the history of Max Batleforc.",
         "required": [
           "title",
           "lieux",
@@ -380,6 +409,7 @@
       },
       "HomeHistoryUrl": {
         "type": "object",
+        "description": "Url that should be present on the history.",
         "required": [
           "url",
           "name"
@@ -395,6 +425,7 @@
       },
       "HomeUrl": {
         "type": "object",
+        "description": "Url that should be present on the home page.",
         "required": [
           "url",
           "name",
@@ -418,6 +449,7 @@
       },
       "Page": {
         "type": "object",
+        "description": "A page containing the content, metadata and name of the page.",
         "required": [
           "name",
           "content",
@@ -437,6 +469,7 @@
       },
       "PageShort": {
         "type": "object",
+        "description": "Short representation of a page, containing only the metadata and the path to the page.",
         "required": [
           "name",
           "path",
@@ -458,24 +491,24 @@
   },
   "tags": [
     {
-      "name": "Home",
-      "description": "Home related endpoints"
-    },
-    {
       "name": "Blog",
-      "description": "Blog related endpoints"
+      "description": "Return the content of the blog timeline and page to be displayed."
     },
     {
       "name": "Doc",
-      "description": "Doc related endpoints"
+      "description": "Return the content of the documentation page, sidebar and header."
     },
     {
-      "name": "Page",
-      "description": "Page related endpoints"
+      "name": "Home",
+      "description": "Endpoints that return the content meant for the home page."
     },
     {
       "name": "Media",
-      "description": "Media related endpoints"
+      "description": "Return the assets that are meant to be dynamically loaded and not a part of the static build."
+    },
+    {
+      "name": "Page",
+      "description": "Return the content of a page with a specific workflow turning shortPage into a full page."
     }
   ]
 }
